Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129814

applicationmanager\application-features\apps\Glitches\Glitches\glitches.cpp(4): fatal error C1083: Cannot open include file: 'unistd.h': No such file or directory

    XMLWordPrintable

Details

    • Windows
    • 5a91740be (dev), 1d12364d3 (6.8)

    Description

      C:\Users\qt\work\qt\qtapplicationmanager\examples\applicationmanager\application-features\apps\Glitches\Glitches\glitches.cpp(4): fatal error C1083: Cannot open include file: 'unistd.h': No such file or directory
      

      Build log: https://testresults.qt.io/logs/qt/qtapplicationmanager/a695708e226f813c196c35bde7e1dee5ca4ac880/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64MSVC2022qtci-windows-11_23H2-x86_64-53-f1a198DebugAndRelease_Sccache_UseConfigure_WarningsAreErrors/e8be2c0be714e8d413d4955bae374c3739f53f88/build_1728387930/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1728387910

      Tested changes (refs/builds/qtci/6.8/1728387908):
      https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/596006/3 Update dependencies on '6.8' in qt/qtapplicationmanager

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rgriebl Robert Griebl
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes