Drop useless include from the Glitches example

It seems that a Unix-only include was not used in this example while
not being excluded from Windows builds. Remove the useless include to
solve the problem.

Fixes: QTBUG-129814
Change-Id: I810d5ed1e1138ce7f21f6bff4e9de7bce4072869
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit 5a91740be58bb93958e5abc83321e6f778f23b2c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>