examples/applicationmanager/application-features/apps/Glitches/Glitches/glitches.cpp
@@ -1,7 +1,6 @@
 // Copyright (C) 2024 The Qt Company Ltd.
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR BSD-3-Clause
 
-#include <unistd.h>
 #include <QQuickWindow>
 #include <QThread>
 #include <QDebug>
